# selfhost

./: .gitignore  AGENTS.md  ATTACK_SURFACE_ANALYSIS.md  AUTH.md  CLAUDE.md  README.md  SSL_CERTIFICATE_INFRASTRUCTURE.md
docs/: README.md  architecture-and-strategy.md
docs/00-getting-started/: 00-index.md  01-prerequisites.md  02-docs-structure.md
docs/01-architecture/: immich-storage-decision.md  overview.md  roadmap.md  storage-strategy.md
docs/02-setup/: b2-bucket-structure.md  cloudflare-origin-cert.md  dns-configuration.md  opentofu-ip-behavior.md
docs/03-operations/: backup-restore.md  daily-operations.md  troubleshooting.md
docs/04-services/: authelia.md  devtools.md  trading.md
ideas/: new service - google drive replacement and or obsidian sync  new service - ibkr trading.md  personal setup plan.md
infra/: .gitignore  .terraform.lock.hcl  README-ENHANCED.md  apply.sh  cloud-init.yml.tpl  main.tf  outputs.tf  providers.tf  recreate.sh  terraform.tfvars.example  variables.tf
server/: .env.example  .gitignore  README.md  docker-compose.yml  setup.sh  start-services.sh  start.sh
server/authelia/: .env.example  docker-compose.yml
server/devtools/: .env.example  docker-compose.yml
server/trading/data-collector/: Dockerfile  pyproject.toml
server/trading/data-collector/scripts/: bootstrap_asx_daily.py  bootstrap_constituents.py
server/trading/data-collector/src/: bar_history.py  config.py  constituent_sync.py  db.py  main.py  parquet_export.py
workbench/: 8-cloudflare-ingress-hardening.md  8-cloudflare-rollout-checklist.md  todo.md
(+57 files in other folders)
