[project]
name = "trading-data-collector"
version = "0.1.0"
description = "IBKR TWS data collector: bar history, constituent sync, Parquet export"
requires-python = ">=3.12"
dependencies = [
    "ib_insync>=0.9.86",
    "asyncpg>=0.29",
    "apscheduler>=3.10",
    "pandas>=2.2",
    "pyarrow>=15",
    "pydantic-settings>=2.2",
    "httpx>=0.27",          # async HTTP for ASX constituent CSV download
    "pdfplumber>=0.11",     # PDF parsing for ASX rebalancing announcement PDFs
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "freezegun>=1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
